# str_to_enum_trie

./: .gitmodules  CMakeLists.txt  Makefile  README.md  test.example
src/: example.c  main.c  mystring.h
